// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <VersionsDropDown/> should match snapshot 1`] = `
<div>
  <div
    class="bp3-popover-wrapper DropDown--main"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
          data-testid="dropdown-button"
          style="min-width: 130px;"
        >
          <div
            class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
              data-testid="dropdown-value"
              style="--text-line-clamp: 1;"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body"
                    style="--text-line-clamp: 1;"
                  >
                    v1
                  </p>
                  <span
                    class="Tag--main"
                  >
                    <span
                      class="bp3-tag tag"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        COMMON.STABLE
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </p>
          </div>
          <div
            class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test <VersionsDropDown/> should match snapshot when always using stable version is selected 1`] = `
<div>
  <div
    class="bp3-popover-wrapper DropDown--main"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class=""
      >
        <div
          class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder DropDown--minWidth StyledProps--flex"
          data-testid="dropdown-button"
          style="min-width: 130px;"
        >
          <div
            class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
              data-testid="dropdown-value"
              style="--text-line-clamp: 1;"
            >
              <div
                class="StyledProps--font StyledProps--main container"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-body"
                    style="--text-line-clamp: 1;"
                  >
                    Always use stable version
                  </p>
                </div>
              </div>
            </p>
          </div>
          <div
            class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
              data-icon="main-chevron-down"
            >
              <svg
                height="8"
                viewBox="0 0 14 8"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
